@@ -1,3 +1,6 @@
+
+# You will need to run autogen.sh after adding something here manually
+
 EXTRA_DIST = \
 	qt.m4 \
 	typedef.m4
